# fishery-stats

./: LICENSE  README.org  fishery-stats.cabal
app/: Main.hs
src/: FisheryStats.hs
src/Network/: Crawler.hs
src/Network/Crawler/: Actions.hs  Types.hs
