name:                fishery-stats
version:             0.1.0.0
synopsis:            Extract fishery markets data from pescadegalicia.com
description:         Please see README.org
homepage:            https://github.com/alexeiras/fishery-stats#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Eiras
maintainer:          alex@sinamo.net
copyright:           2016 Alex Eiras
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FisheryStats
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , exceptions
                     , hedis
                     , html-conduit
                     , http-client
                     , mtl
                     , text
                     , time
                     , transformers
                     , xml-conduit
  default-language:    Haskell2010

executable fishery-stats-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fishery-stats
  default-language:    Haskell2010

test-suite fishery-stats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fishery-stats
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexeiras/fishery-stats
